fluxcd/apps/overlays/production/jellyseerr/service-jellyseerr-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  labels:
    policy.prplanit.com/ingress: "true"
