fluxcd/apps/overlays/production/jellyseerr/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  annotations:
    lbipam.cilium.io/ips: "172.22.30.33"
    lbipam.cilium.io/sharing-key: "great-sea"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    service.cilium.io/loadbalancer-mode: "dsr"
spec:
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 5055
    targetPort: 5055
