fluxcd/apps/overlays/production/jellyseerr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr
  namespace: swift-sail
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Downloads & Media (Swift Sail⛵)"
spec:
  parentRefs:
    - name: cell-membrane-gateway
      namespace: prelude-of-light
  hostnames:
    - "jseer.optcp.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyseerr
          port: 5055
